--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>developer-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>Wellcome To </h1>
+            <h1> <span class="color-orange">ALAMIN ISLAM</span> World</h1>
+            <h2> I am a Developer & Graphic designer</h2>
+            <P>Elinext is an international development company with over 400 developers across the globe. 23 years in
+                web
+                development, we'll deliver UX/UI services that'll thrill your clients. View Case Studies. Browse
+                Services.
+                Read Blog. Industries: Retail, Healthcare, Education.</P>
+        </div>
+
+        <div class="half-width"> <img src="image/ALAMIN.png" alt=""></div>
+    </section>
 </body>
+
 </html>
